--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -12,55 +17,42 @@
 </head>
 
 <body>
+
+    <!-- Barra menu -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-5">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand ps-5" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <div class="collapse navbar-collapse pe-5" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto ">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#">Trabajos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
+                            <a class="nav-link active" aria-current="page" href="#">Algo<a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                            <a class="nav-link active" aria-current="page" href="#">Contacto</a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                 </div>
             </div>
         </nav>
     </header>
-    <section class="bg-black">
-        <div class="container ">
-            <div class="row">
-                <div class="col-12">
-                    <h1>Portafolio</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nam voluptatem eum corporis
+
+    <!-- Seccion Hero Presentacion de perfil-->
+    <section id="hero">
+        <div class="container hero_seccion d-flex flex-row align-items-center">
+            <div class="">
+                <div class="col-10">
+                    <h1>Hola, mi nombre es Luis, <br>diseñador Front End</h1>
+                    <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nam voluptatem eum
+                        corporis
                         reiciendis, et quidem laboriosam vero quia accusantium repellat a dignissimos totam nesciunt
                         blanditiis culpa veritatis maxime possimus?
                         Nobis vero quam, quia ipsum sed natus eos blanditiis praesentium quasi nam temporibus minus
@@ -69,40 +61,63 @@
                         Sunt aliquid commodi amet nemo alias reiciendis numquam minus praesentium error, ipsam nihil
                         accusantium animi voluptate itaque! Illum nisi minus assumenda quisquam saepe sint dignissimos
                         et exercitationem quia, nam eum.</p>
-                    <button type="button" class="btn btn-primary">Primary</button>
+                    <button type="button" class="btn btn-primary mt-4">Contacto</button>
                 </div>
+            </div>
+            <div>
+                <img src="assets/img/rousseau_jpg.jpg" class="foto-hero" alt="Foto de perfil">
             </div>
         </div>
     </section>
 
+    <!-- Seccion cajas/link a proyectos relaizados -->
+    <section id="cajas">
 
-    <section>
-        <div class="container">
-            <div class="row bg-black height=100">
-                <div class="">
-                    <a href="#" target="_blank"></a>
-                </div>
-            </div>
+        <div class="caja-1">
+            <h2><a href="editorial.html">Editorial</a></h2>
+        </div>
 
-            <div class="row">
-                <div class="">
-                    <a href="#" target="_blank"></a>
-                </div>
-            </div>
+        <div class="caja-2">
+            <h2><a href="editorial.html">Desarrollo web</a></h2>
+        </div>
 
-            <div class="row">
-                <div class="">
-                    <a href="#" target="_blank"></a>
-                </div>
-            </div>
+        <div class="caja-3">
+            <h2><a href="editorial.html">Infografía</a></h2>
+        </div>
 
-            <div class="row">
-                <div class="">
-                    <a href="#" target="_blank"></a>
-                </div>
-            </div>
+        <div class="caja-4">
+            <h2><a href="editorial.html">Retoque digital</a></h2>
+        </div>
+
+    </section>
+
+    <!-- Seccion forma de trabajo o intencion de proyecto -->
+
+    <section id="trabajo">
+        <div >
+            <p><i class="fa-solid fa-robot fa-2xl"></i></p>
+            <h3>Forma de trabajo</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsum qui quaerat, mollitia magnam
+                eveniet veritatis fugit voluptates illum reiciendis consequuntur nesciunt sed. Optio ex excepturi,
+                tempora assumenda debitis necessitatibus?</p>
+        </div>
+        <div>
+            <p><i class="fa-solid fa-bullseye fa-2xl"></i></p>
+            <h3>Objetivos</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta ad deleniti nihil, necessitatibus, nulla
+                totam voluptatum facilis repudiandae exercitationem consequuntur quos? Exercitationem unde molestias
+                dolorem necessitatibus magni maiores delectus!</p>
+        </div>
+        <div>
+            <p><i class="fa-solid fa-sitemap fa-2xl"></i></p>
+            <h3>Metodologia</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta ad deleniti nihil, necessitatibus, nulla
+                totam voluptatum facilis repudiandae exercitationem consequuntur quos? Exercitationem unde molestias
+                dolorem necessitatibus magni maiores delectus !</p>
         </div>
     </section>
+
+
 
 
 
@@ -122,6 +137,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
         integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/89550f8bc5.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 
 </body>
