Correcciones en las cajas, border radius y aplicacion  de link al menu

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <div class="collapse navbar-collapse pe-5" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto ">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Trabajos</a>
+                            <a class="nav-link active" aria-current="page" href="#cajas">Trabajos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Algo<a>
+                            <a class="nav-link active" aria-current="page" href="#trabajo">Sobre mi</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Contacto</a>
@@ -50,7 +50,7 @@
         <div class="container hero_seccion d-flex flex-row align-items-center">
             <div class="">
                 <div class="col-10">
-                    <h1>Hola, mi nombre es Luis, <br>diseñador Front End</h1>
+                    <h1>Hola soy Luis,<br>diseñador FrontEnd</h1>
                     <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nam voluptatem eum
                         corporis
                         reiciendis, et quidem laboriosam vero quia accusantium repellat a dignissimos totam nesciunt
@@ -70,7 +70,7 @@
         </div>
     </section>
 
-    <!-- Seccion cajas/link a proyectos relaizados -->
+    <!-- Seccion cajas/link a proyectos realizados -->
     <section id="cajas">
 
         <div class="caja-1">
