Correcciones de responsividad

--- a/index.html
+++ b/index.html
@@ -71,30 +71,89 @@
     </section>
 
     <!-- Seccion cajas/link a proyectos realizados -->
-    <section id="cajas">
+    <section id="cajas" class="" >
 
-        <div class="caja-1">
-            <h2><a href="editorial.html">Editorial</a></h2>
-        </div>
+        <div class="row" >
 
-        <div class="caja-2">
-            <h2><a href="editorial.html">Desarrollo web</a></h2>
-        </div>
+            <div class="caja-1 col-12 col-md-6 col-lg-3">
+                <h2><a href="editorial.html">Editorial</a></h2>
+            </div>
 
-        <div class="caja-3">
-            <h2><a href="editorial.html">Infografía</a></h2>
-        </div>
+            <div class="caja-2 col-12 col-md-6 col-lg-3">
+                <h2><a href="editorial.html">Desarrollo web</a></h2>
+            </div>
 
-        <div class="caja-4">
-            <h2><a href="editorial.html">Retoque digital</a></h2>
+            <div class="caja-3 col-12 col-md-6 col-lg-3">
+                <h2><a href="editorial.html">Infografía</a></h2>
+            </div>
+
+            <div class="caja-4 col-12 col-md-6 col-lg-3">
+                <h2><a href="editorial.html">Retoque digital</a></h2>
+            </div>
         </div>
 
     </section>
 
+
+    <!-- Proyectos -->
+
+
+    <section class="container-card">
+
+        <h2 class="card-title-projects">Mis proyectos</h2>
+
+        <div class="cards-grid row ">
+            <div class="card col-12 col-md-4 col-lg-2  ">
+                <img src="assets/img/web.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+
+
+            <div class="card col-12 col-md-4 col-lg-2 ">
+                <img src="assets/img/web.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+
+
+            <div class="card col-12 col-md-4 col-lg-2 ">
+                <img src="assets/img/web.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+
+
+            <div class="card col-12  col-md-4 col-lg-2 ">
+                <img src="assets/img/web.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card’s content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
     <!-- Seccion forma de trabajo o intencion de proyecto -->
 
     <section id="trabajo">
-        <div >
+        <div>
             <p><i class="fa-solid fa-robot fa-2xl"></i></p>
             <h3>Forma de trabajo</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsum qui quaerat, mollitia magnam
