--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <section id="hero">
         <div class="container hero_seccion d-flex flex-row align-items-center">
             <div class="">
-                <div class="col-10">
+                <div class="">
                     <h1>Hola soy Luis,<br>diseñador FrontEnd</h1>
-                    <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nam voluptatem eum
+                    <p class="mt-3 me-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nam voluptatem eum
                         corporis
                         reiciendis, et quidem laboriosam vero quia accusantium repellat a dignissimos totam nesciunt
                         blanditiis culpa veritatis maxime possimus?
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div>
-                <img src="assets/img/rousseau_jpg.jpg" class="foto-hero" alt="Foto de perfil">
+                <img src="assets/img/rousseau_jpg.jpg" class="foto-hero d-none d-lg-block" alt="Foto de perfil">
             </div>
         </div>
     </section>
@@ -102,8 +102,8 @@
 
         <h2 class="card-title-projects">Mis proyectos</h2>
 
-        <div class="cards-grid row ">
-            <div class="card col-12 col-md-4 col-lg-2  ">
+        <div class="cards-grid row">
+            <div class="card col-12 col-md-6 col-lg-3">
                 <img src="assets/img/web.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -114,7 +114,7 @@
             </div>
 
 
-            <div class="card col-12 col-md-4 col-lg-2 ">
+            <div class="card col-12 col-md-6 col-lg-3 ">
                 <img src="assets/img/web.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -125,7 +125,7 @@
             </div>
 
 
-            <div class="card col-12 col-md-4 col-lg-2 ">
+            <div class="card col-12 col-md-6 col-lg-3 ">
                 <img src="assets/img/web.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -136,7 +136,7 @@
             </div>
 
 
-            <div class="card col-12  col-md-4 col-lg-2 ">
+            <div class="card col-12 col-md-6 col-lg-3 ">
                 <img src="assets/img/web.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
